sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * FFI-safe 2D vector representation.
 */
typedef struct FfiVec2 {
    /**
     * X component.
     */
    float x;
    /**
     * Y component.
     */
    float y;
} FfiVec2;
/**
 * FFI-safe Transform2D representation.
 */
typedef struct FfiTransform2D {
    /**
     * Position X in world space.
     */
    float position_x;
    /**
     * Position Y in world space.
     */
    float position_y;
    /**
     * Rotation angle in radians.
     */
    float rotation;
    /**
     * Scale along X axis.
     */
    float scale_x;
    /**
     * Scale along Y axis.
     */
    float scale_y;
} FfiTransform2D;
/**
 * Heap-allocated transform builder for FFI use.
 */
typedef struct FfiTransform2DBuilder {
    /**
     * The transform being built.
     */
    struct FfiTransform2D transform;
} FfiTransform2DBuilder;
/**
 * FFI-safe Mat3x3 representation (9 floats in column-major order).
 */
typedef struct FfiMat3x3 {
    /**
     * Matrix elements in column-major order.
     */
    float m[9];
} FfiMat3x3;
/* === Transform2D === */

/**
 * Creates a new transform builder with default values.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_new(void);
/**
 * Creates a new transform builder at a specific position.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_at_position(float x, float y);
/**
 * Sets the position on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_position(struct FfiTransform2DBuilder *builder, float x, float y);
/**
 * Sets the rotation (in radians) on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_rotation(struct FfiTransform2DBuilder *builder, float rotation);
/**
 * Sets the rotation (in degrees) on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_rotation_degrees(struct FfiTransform2DBuilder *builder, float degrees);
/**
 * Sets the scale on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_scale(struct FfiTransform2DBuilder *builder, float scale_x, float scale_y);
/**
 * Sets uniform scale on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_scale_uniform(struct FfiTransform2DBuilder *builder, float scale);
/**
 * Makes the builder's transform look at a target position.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_looking_at(struct FfiTransform2DBuilder *builder, float target_x, float target_y);
/**
 * Translates the builder's position.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_translate(struct FfiTransform2DBuilder *builder, float dx, float dy);
/**
 * Rotates the builder's transform.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_rotate(struct FfiTransform2DBuilder *builder, float angle);
/**
 * Multiplies the builder's scale.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_scale_by(struct FfiTransform2DBuilder *builder, float factor_x, float factor_y);
/**
 * Builds and consumes the transform builder, returning the final transform.
 */
struct FfiTransform2D goud_transform2d_builder_build(struct FfiTransform2DBuilder *builder);
/**
 * Frees a transform builder without building.
 */
void goud_transform2d_builder_free(struct FfiTransform2DBuilder *builder);
/**
 * Returns the forward direction vector (positive X axis after rotation).
 */
struct FfiVec2 goud_transform2d_forward(const struct FfiTransform2D *transform);
/**
 * Returns the right direction vector (positive Y axis after rotation).
 */
struct FfiVec2 goud_transform2d_right(const struct FfiTransform2D *transform);
/**
 * Returns the backward direction vector (negative X axis after rotation).
 */
struct FfiVec2 goud_transform2d_backward(const struct FfiTransform2D *transform);
/**
 * Returns the left direction vector (negative Y axis after rotation).
 */
struct FfiVec2 goud_transform2d_left(const struct FfiTransform2D *transform);
/**
 * Creates a default Transform2D at the origin with no rotation and unit scale.
 */
struct FfiTransform2D goud_transform2d_default(void);
/**
 * Creates a Transform2D at the specified position with default rotation and scale.
 */
struct FfiTransform2D goud_transform2d_from_position(float x, float y);
/**
 * Creates a Transform2D at the origin with the specified rotation.
 */
struct FfiTransform2D goud_transform2d_from_rotation(float rotation);
/**
 * Creates a Transform2D at the origin with the specified rotation in degrees.
 */
struct FfiTransform2D goud_transform2d_from_rotation_degrees(float degrees);
/**
 * Creates a Transform2D at the origin with the specified scale.
 */
struct FfiTransform2D goud_transform2d_from_scale(float scale_x, float scale_y);
/**
 * Creates a Transform2D with uniform scale.
 */
struct FfiTransform2D goud_transform2d_from_scale_uniform(float scale);
/**
 * Creates a Transform2D with position and rotation.
 */
struct FfiTransform2D goud_transform2d_from_position_rotation(float x, float y, float rotation);
/**
 * Creates a Transform2D with all components specified.
 */
struct FfiTransform2D goud_transform2d_new(float pos_x, float pos_y, float rotation, float scale_x, float scale_y);
/**
 * Creates a Transform2D looking at a target position.
 */
struct FfiTransform2D goud_transform2d_look_at(float pos_x, float pos_y, float target_x, float target_y);
/**
 * Computes the 3x3 transformation matrix.
 */
struct FfiMat3x3 goud_transform2d_matrix(const struct FfiTransform2D *transform);
/**
 * Computes the inverse transformation matrix.
 */
struct FfiMat3x3 goud_transform2d_matrix_inverse(const struct FfiTransform2D *transform);
/**
 * Transforms a point from local space to world space.
 */
struct FfiVec2 goud_transform2d_transform_point(const struct FfiTransform2D *transform, float point_x, float point_y);
/**
 * Transforms a direction from local space to world space.
 */
struct FfiVec2 goud_transform2d_transform_direction(const struct FfiTransform2D *transform, float dir_x, float dir_y);
/**
 * Transforms a point from world space to local space.
 */
struct FfiVec2 goud_transform2d_inverse_transform_point(const struct FfiTransform2D *transform, float point_x, float point_y);
/**
 * Transforms a direction from world space to local space.
 */
struct FfiVec2 goud_transform2d_inverse_transform_direction(const struct FfiTransform2D *transform, float dir_x, float dir_y);
/**
 * Linearly interpolates between two transforms.
 */
struct FfiTransform2D goud_transform2d_lerp(struct FfiTransform2D from, struct FfiTransform2D to, float t);
/**
 * Normalizes an angle to the range [-PI, PI).
 */
float goud_transform2d_normalize_angle(float angle);
/**
 * Translates the transform by the given offset in world space.
 */
void goud_transform2d_translate(struct FfiTransform2D *transform, float dx, float dy);
/**
 * Translates the transform in local space.
 */
void goud_transform2d_translate_local(struct FfiTransform2D *transform, float dx, float dy);
/**
 * Sets the position of the transform.
 */
void goud_transform2d_set_position(struct FfiTransform2D *transform, float x, float y);
/**
 * Gets the position of the transform.
 */
struct FfiVec2 goud_transform2d_get_position(const struct FfiTransform2D *transform);
/**
 * Rotates the transform by the given angle in radians.
 */
void goud_transform2d_rotate(struct FfiTransform2D *transform, float angle);
/**
 * Rotates the transform by the given angle in degrees.
 */
void goud_transform2d_rotate_degrees(struct FfiTransform2D *transform, float degrees);
/**
 * Sets the rotation angle in radians.
 */
void goud_transform2d_set_rotation(struct FfiTransform2D *transform, float rotation);
/**
 * Sets the rotation angle in degrees.
 */
void goud_transform2d_set_rotation_degrees(struct FfiTransform2D *transform, float degrees);
/**
 * Gets the rotation angle in radians.
 */
float goud_transform2d_get_rotation(const struct FfiTransform2D *transform);
/**
 * Gets the rotation angle in degrees.
 */
float goud_transform2d_get_rotation_degrees(const struct FfiTransform2D *transform);
/**
 * Makes the transform look at a target position.
 */
void goud_transform2d_look_at_target(struct FfiTransform2D *transform, float target_x, float target_y);
/**
 * Sets the scale of the transform.
 */
void goud_transform2d_set_scale(struct FfiTransform2D *transform, float scale_x, float scale_y);
/**
 * Sets uniform scale on both axes.
 */
void goud_transform2d_set_scale_uniform(struct FfiTransform2D *transform, float scale);
/**
 * Gets the scale of the transform.
 */
struct FfiVec2 goud_transform2d_get_scale(const struct FfiTransform2D *transform);
/**
 * Multiplies the current scale by the given factors.
 */
void goud_transform2d_scale_by(struct FfiTransform2D *transform, float factor_x, float factor_y);