sdks/python/goud_engine/generated/_ffi.py


    # component_transform2d
    _lib.goud_transform2d_default.argtypes = []
    _lib.goud_transform2d_default.restype = FfiTransform2D
    _lib.goud_transform2d_from_position.argtypes = [ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_from_position.restype = FfiTransform2D
    _lib.goud_transform2d_from_rotation.argtypes = [ctypes.c_float]
    _lib.goud_transform2d_from_rotation.restype = FfiTransform2D
    _lib.goud_transform2d_from_rotation_degrees.argtypes = [ctypes.c_float]
    _lib.goud_transform2d_from_rotation_degrees.restype = FfiTransform2D
    _lib.goud_transform2d_from_scale.argtypes = [ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_from_scale.restype = FfiTransform2D
    _lib.goud_transform2d_from_scale_uniform.argtypes = [ctypes.c_float]
    _lib.goud_transform2d_from_scale_uniform.restype = FfiTransform2D
    _lib.goud_transform2d_from_position_rotation.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_from_position_rotation.restype = FfiTransform2D
    _lib.goud_transform2d_new.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_new.restype = FfiTransform2D
    _lib.goud_transform2d_look_at.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_look_at.restype = FfiTransform2D
    _lib.goud_transform2d_translate.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_translate.restype = None
    _lib.goud_transform2d_translate_local.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_translate_local.restype = None
    _lib.goud_transform2d_set_position.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_set_position.restype = None
    _lib.goud_transform2d_get_position.argtypes = [ctypes.POINTER(FfiTransform2D)]
    _lib.goud_transform2d_get_position.restype = FfiVec2
    _lib.goud_transform2d_rotate.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float]
    _lib.goud_transform2d_rotate.restype = None
    _lib.goud_transform2d_rotate_degrees.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float]
    _lib.goud_transform2d_rotate_degrees.restype = None
    _lib.goud_transform2d_set_rotation.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float]
    _lib.goud_transform2d_set_rotation.restype = None
    _lib.goud_transform2d_set_rotation_degrees.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float]
    _lib.goud_transform2d_set_rotation_degrees.restype = None
    _lib.goud_transform2d_get_rotation.argtypes = [ctypes.POINTER(FfiTransform2D)]
    _lib.goud_transform2d_get_rotation.restype = ctypes.c_float
    _lib.goud_transform2d_get_rotation_degrees.argtypes = [ctypes.POINTER(FfiTransform2D)]
    _lib.goud_transform2d_get_rotation_degrees.restype = ctypes.c_float
    _lib.goud_transform2d_look_at_target.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_look_at_target.restype = None
    _lib.goud_transform2d_set_scale.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_set_scale.restype = None
    _lib.goud_transform2d_set_scale_uniform.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float]
    _lib.goud_transform2d_set_scale_uniform.restype = None
    _lib.goud_transform2d_get_scale.argtypes = [ctypes.POINTER(FfiTransform2D)]
    _lib.goud_transform2d_get_scale.restype = FfiVec2
    _lib.goud_transform2d_scale_by.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_scale_by.restype = None
    _lib.goud_transform2d_forward.argtypes = [ctypes.POINTER(FfiTransform2D)]
    _lib.goud_transform2d_forward.restype = FfiVec2
    _lib.goud_transform2d_right.argtypes = [ctypes.POINTER(FfiTransform2D)]
    _lib.goud_transform2d_right.restype = FfiVec2
    _lib.goud_transform2d_backward.argtypes = [ctypes.POINTER(FfiTransform2D)]
    _lib.goud_transform2d_backward.restype = FfiVec2
    _lib.goud_transform2d_left.argtypes = [ctypes.POINTER(FfiTransform2D)]
    _lib.goud_transform2d_left.restype = FfiVec2
    _lib.goud_transform2d_matrix.argtypes = [ctypes.POINTER(FfiTransform2D)]
    _lib.goud_transform2d_matrix.restype = FfiMat3x3
    _lib.goud_transform2d_matrix_inverse.argtypes = [ctypes.POINTER(FfiTransform2D)]
    _lib.goud_transform2d_matrix_inverse.restype = FfiMat3x3
    _lib.goud_transform2d_transform_point.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_transform_point.restype = FfiVec2
    _lib.goud_transform2d_transform_direction.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_transform_direction.restype = FfiVec2
    _lib.goud_transform2d_inverse_transform_point.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_inverse_transform_point.restype = FfiVec2
    _lib.goud_transform2d_inverse_transform_direction.argtypes = [ctypes.POINTER(FfiTransform2D), ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_inverse_transform_direction.restype = FfiVec2
    _lib.goud_transform2d_lerp.argtypes = [FfiTransform2D, FfiTransform2D, ctypes.c_float]
    _lib.goud_transform2d_lerp.restype = FfiTransform2D
    _lib.goud_transform2d_normalize_angle.argtypes = [ctypes.c_float]
    _lib.goud_transform2d_normalize_angle.restype = ctypes.c_float
    _lib.goud_transform2d_builder_new.argtypes = []
    _lib.goud_transform2d_builder_new.restype = ctypes.c_void_p
    _lib.goud_transform2d_builder_at_position.argtypes = [ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_builder_at_position.restype = ctypes.c_void_p
    _lib.goud_transform2d_builder_with_position.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_builder_with_position.restype = ctypes.c_void_p
    _lib.goud_transform2d_builder_with_rotation.argtypes = [ctypes.c_void_p, ctypes.c_float]
    _lib.goud_transform2d_builder_with_rotation.restype = ctypes.c_void_p
    _lib.goud_transform2d_builder_with_rotation_degrees.argtypes = [ctypes.c_void_p, ctypes.c_float]
    _lib.goud_transform2d_builder_with_rotation_degrees.restype = ctypes.c_void_p
    _lib.goud_transform2d_builder_with_scale.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_builder_with_scale.restype = ctypes.c_void_p
    _lib.goud_transform2d_builder_with_scale_uniform.argtypes = [ctypes.c_void_p, ctypes.c_float]
    _lib.goud_transform2d_builder_with_scale_uniform.restype = ctypes.c_void_p
    _lib.goud_transform2d_builder_looking_at.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_builder_looking_at.restype = ctypes.c_void_p
    _lib.goud_transform2d_builder_translate.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_builder_translate.restype = ctypes.c_void_p
    _lib.goud_transform2d_builder_rotate.argtypes = [ctypes.c_void_p, ctypes.c_float]
    _lib.goud_transform2d_builder_rotate.restype = ctypes.c_void_p
    _lib.goud_transform2d_builder_scale_by.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float]
    _lib.goud_transform2d_builder_scale_by.restype = ctypes.c_void_p
    _lib.goud_transform2d_builder_build.argtypes = [ctypes.c_void_p]
    _lib.goud_transform2d_builder_build.restype = FfiTransform2D
    _lib.goud_transform2d_builder_free.argtypes = [ctypes.c_void_p]
    _lib.goud_transform2d_builder_free.restype = None
